--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,28 @@ img {
   transform: scale(1);
 }
 
+.arrow-nav {
+  display: flex;
+  justify-content: space-around;
+  margin: 20px 0;
+  overflow: hidden;
+}
+
+.arrow-nav button {
+  cursor: pointer;
+  border: none;
+  border-radius: 4px;
+  text-indent: -99999px;
+  color: white;
+  width: 40px;
+  height: 40px;
+  background: #fb5 url("../img/arrow.svg") center no-repeat;
+}
+
+.arrow-nav .prev {
+  transform: rotate(-180deg);
+}
+
 [data-control='slide'] {
   display: flex;
   justify-content: center;
@@ -65,3 +87,36 @@ img {
 [data-control='slide'] li a:hover {
   background: #e54;
 }
+
+.custom-control {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 40px 0 10px;
+}
+
+.custom-control li {
+  opacity: 0.8;
+  transform: scale(.8);
+  width: 40px;
+  height: 40px;
+  margin: 2px;
+  border-radius: 50%;
+  overflow: hidden;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, .2);
+  transition: .3s;
+}
+
+.custom-control li.active {
+  opacity: 1;
+  transform: scale(1);
+}
+
+/* 
+  Estilo só necessário 
+  se as imagens não estiverem no tamanho certo
+*/
+/* .custom-control img {
+  height: 100%;
+  object-fit: cover;
+} */
